# HRR-robot-control

./: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  LICENSE  README.md  current.net.yaml
hrr_cobot/: CMakeLists.txt  Makefile  README.md  package.xml  rosdoc.yaml
hrr_cobot/doc/: conf.py  controller_plugins.xml  index.rst  ros  skills.rst
hrr_cobot/doc/hrr_cobot_robot/: README.md  cobot.rst  ee_tools.rst  nodes.rst
hrr_cobot/doc/hrr_common/: index.rst  ros_utils.rst  utils.rst
hrr_cobot/doc/hrr_controllers/: README.md  digital_controllers.rst  ft_interface.rst  index.rst  media  robot_state.rst  sensor_track.rst  trajectory_control.rst  wsg_50.rst
hrr_cobot/doc/mini_wiki/: ROS_file_overview.rst  bugs_and_troubleshooting.rst  config  hrr_cobot_robot_launch  hrr_common_launch  index.rst  namespace_handling.rst  pcl.rst  robot_startup.rst  system_setup.rst
hrr_cobot/doc/notebooks/: index.deprecated
hrr_cobot_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
hrr_cobot_moveit_config/config/: benchmark_all.yaml  kinematics.yaml  ompl_planning.yaml  stomp_planning.yaml
hrr_cobot_moveit_config/config/joint_limits/: joint_1.yaml  joint_2.yaml  joint_3.yaml  joint_5.yaml  jr3_msr_joint.yaml  wsg_gripper_joint.yaml
hrr_cobot_moveit_config/config/robot_semantics/: hrr_cobot_arm_semantic.xacro  hrr_cobot_semantic.xacro  racer5_semantic.xacro  sensor_gripper_semantic.xacro
hrr_cobot_moveit_config/launch/: benchmark_planners.launch  hrr_cobot_plan.launch  move_group.launch  moveit_demo.launch  warehouse_db.launch
hrr_cobot_moveit_config/launch/settings/: chomp.launch.xml  ompl.launch.xml  planning_context.launch.xml  stomp.launch.xml
hrr_cobot_moveit_config/name_specific_config/: fake_controllers.yaml  joint_limits.yaml  ros_controllers.yaml
hrr_cobot_robot/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
hrr_cobot_robot/cfg/: SkillGraph.cfg
hrr_cobot_robot/config/: hrr_cobot.prefix.yaml  pilot.yaml  ros_debug.conf  ros_out.conf  tum.yaml  wsg_50.yaml
hrr_cobot_robot/config/.archive/: controller_integration.yaml  controllers.yaml  hrr_cobot.yaml  hrr_external.dummy.yaml  robot_hw.yaml
hrr_cobot_robot/data/shaftgrinder/: Untitled.ipynb  shaftgrind_help.npy
hrr_cobot_robot/data/tool_changer/: Change routine.ipynb  completeRoutineTest.ipynb  nextCutting_q.npy  pgrip_4.npy  pgrip_4_final.npy  screwdriver_6_final.npy  shaftgrinder_1.npy  shaftgrinder_1_dispose.npy  shaftgrinder_5_final.npy  twoCutting_A.npy  twoCutting_q.npy  vacuum_2.npy  vacuum_2_final.npy  vacuum_2_hardcode.npy  wsg_3.npy  wsg_3_final.npy  wsg_3_hardcode.npy
hrr_cobot_robot/include/hrr_cobot_robot/: hrr_cobot_hw.h  hrr_cobot_node_utils.h  hrr_safety.h
hrr_cobot_robot/launch/: hrr_cobot_control.launch  hrr_cobot_hw.launch  hrr_wsg_50.launch  urdf_updater.launch
hrr_cobot_robot/launch/change_tool/: tool_change.launch
hrr_cobot_robot/scripts/: Unscrewing done!.npy  Unscrewing failed due to unknown reasons.npy  enable_sns_trk  ft_calibrator  gripper_watchdog  hybrid_grasping_controller  plot_ft_calibration  skill_server  urdf_updater_server
hrr_cobot_robot/scripts/archive/: robot_state_publisher_restarter  tool_changer
hrr_cobot_robot/src/: hrr_cobot_hw.cpp  hrr_cobot_node.cpp  hrr_cobot_secure_node.cpp  hrr_safety.cpp
hrr_cobot_robot/src/hrr_cobot_robot/: __init__.py  hrr_cobot_control.py  hrr_cobot_handle.py  hrr_cobot_observer.py  motion_planner_if.py  ros_nodes_click_commands.py  static_scene.py  utils.py
hrr_cobot_robot/test/: ros_interfaces.py  run_tests.py
hrr_cobot_sim/: CMakeLists.txt  README.md  package.xml
hrr_cobot_sim/assets/mujoco/: env.xacro  mj_racer_cobot.xacro  mujoco_common.xacro
hrr_cobot_sim/config/: rosconsole.conf  sim_controllers.yaml  sim_gripper.yaml
hrr_cobot_sim/launch/: gazebo.launch  hrr_cobot_sim_demo.launch  hrr_cobot_sim_moveit.launch  spawn_hrr_cobot.launch
hrr_cobot_sim/launch/mujoco_deprecated/: mujoco.generate_model.deprecated  mujoco.robot.deprecated  simulation.mujoco.deprecated
hrr_common/: CMakeLists.txt  package.xml  setup.py
hrr_common/description/: common.xacro  hrr_tool.xacro  hw_hrr_0_80_cobot.xacro  hw_hrr_cobot.xacro  materials.xacro  sim_common.xacro  sim_hrr_0_80_cobot.xacro  sim_hrr_cobot.xacro
hrr_common/include/hrr_common/: conversions.h  (+1 more)
hrr_common/launch/: hrr_cobot.launch  hrr_tool.launch  record_pipeline.launch  rviz.launch  view_robot.launch
hrr_common/rviz/: Unscrewing done!.npy  Unscrewing failed due to unknown reasons.npy  hrr_cobot.rviz  hrr_cobot_gripper.rviz  hrr_cobot_hw.rviz  hrr_cobot_hw_pcl.rviz  hrr_cobot_sim.rviz  hrr_cobot_sim_moveit.rviz  shaftgrinder.rviz
hrr_common/scripts/: cam_calibrator  ee_bounding_box_visualizer  joint_state_publisher  pcl_transformer  record_master  trigger_dummy
hrr_common/src/: conversions.cpp  utils.cpp
hrr_controllers/: CMakeLists.txt  README.md  controller_plugins.xml  package.xml  setup.py
hrr_controllers/cfg/: Gains.cfg
hrr_controllers/src/: cartesian_state_controller.cpp  digital_io_state_controller.cpp  dout_controller.cpp  dout_encoder_controller.cpp  ft_state_controller.cpp  sns_trk_hybrid_vel_force_controller.cpp  sns_trk_velocity_controller.cpp  tp5_state_controller.cpp
hrr_ee_tools/: CMakeLists.txt  README.md  package.xml
hrr_ee_tools/description/: hrr_tool.urdf.xacro  screwdriver.xacro  shaftgrinder.xacro  toolchanger.xacro  vacuum.xacro
hrr_ee_tools/launch/: tool_controller.launch
hrr_ee_tools/meshes/: EQC20-B.stl  EQC20-B_simple.stl  screwdriver.stl  screwdriver_v1.stl  shaftgrinder.stl
hrr_ee_tools/scripts/: grinder_service.py  tool_controller_node
hrr_msgs/: CMakeLists.txt  README.md  package.xml
hrr_msgs/action/: CalibrateCobot.action  Planner.action
hrr_msgs/msg/: DeadMan.msg  HybridForceVelocityCmd.msg  HybridForceVelocityCmdStamped.msg  HybridForceVelocityControlSelect.msg  SnsTrkTwistCmd.msg  SnsTrkTwistCmdStamped.msg  ToolCom.msg
hrr_msgs/srv/: GetDeadManState.srv  GetDoutControllerState.srv  GetSensorBias.srv  SetEncoderState.srv  SetKolverState.srv  SetPins.srv  cutting_srv.srv
(+176 files in other folders)
