<?xml version="1.0"?>
<package format="2">
  <name>hrr_cobot</name>
  <version>0.4.0</version>
  <description> HR-Recycler Cobot Robot setup  </description>

  <maintainer email="hr-recycler@lsr.ei.tum.de">TUM</maintainer>

  <license>BSD</license>
 
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>hrr_cobot_robot</exec_depend>
  <exec_depend>hrr_common</exec_depend>
  <exec_depend>hrr_controllers</exec_depend>
  <exec_depend>hrr_msgs</exec_depend>
  <exec_depend>hrr_tools</exec_depend>  
  <export>
    <metapackage />
    <rosdoc config="doc/rosdoc.yaml" />
  </export>
</package>
