<?xml version="1.0"?>
<package format="2">
  <name>hrr_cobot_sim</name>
  <version>0.1.0</version>
  <description>HR-Recycler Cobot Simulation setup</description>
 
  <author email="hr-recycler@lsr.ei.tum.de">HR-Recycler (TUM)</author>
  <maintainer email="hr-recycler@lsr.ei.tum.de">HR-Recycler (TUM)</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>hrr_common</exec_depend>
  <exec_depend>hrr_cobot_moveit_config</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>velocity_contollers</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>position_controllers</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
