<?xml version="1.0"?>
<package format="2">
  <name>hrr_common</name>
  <version>0.3.0</version>
  <description>The hrr_common package</description>

  <maintainer email="hr-recycler@lsr.ei.tum.de">HR-Recylcer (TUM)</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>roscpp</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  
  <exec_depend>xacro</exec_depend>
  <exec_depend>comau_description</exec_depend>
  <exec_depend>force_torque_plugin</exec_depend>
  <exec_depend>wsg_50_description</exec_depend>
  <exec_depend>hrr_ee_tools</exec_depend>
  <export/>
</package>
