<?xml version="1.0"?>
<package format="2">
    <name>hrr_controllers</name>
    <version>0.3.1</version>
    <description>The hrr_controllers package</description>

   <author email="hr-recycler@lsr.ei.tum.de">HR-Recycler (TUM)</author>
   <maintainer email="hr-recycler@lsr.ei.tum.de">HR-Recycler (TUM)</maintainer>
   <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>comau_msgs</depend>
    <depend>comau_driver</depend>

    <depend>controller_interface</depend>
    <depend>control_toolbox</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>eigen_conversions</depend>
    <depend>geometry_msgs</depend>
    <depend>hardware_interface</depend>
    <depend>hrr_common</depend>
    <depend>hrr_msgs</depend>
    <depend>pluginlib</depend>
    <depend>realtime_tools</depend>
    <depend>roscpp</depend>
    <depend>tf</depend>

    <export>
        <controller_interface plugin="${prefix}/controller_plugins.xml"/>
    </export>
</package>
