<?xml version="1.0"?>
<package format="2">
  <name>hrr_msgs</name>
  <version>0.3.1</version>
  <description>The hrr_msgs package</description>

  <author email="hr-recycler@lsr.ei.tum.de">HR-Recycler (TUM)</author>
  <maintainer email="hr-recycler@lsr.ei.tum.de">HR-Recycler (TUM)</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>comau_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>


</package>
